--- a/index2.html
+++ b/index2.html
@@ -13,8 +13,10 @@
     </div>
     <div class="box">
         <div class="input">
+         <form>
             <input type="email" placeholder="E-posta veya Telefon Numarası"> <br>
             <input type="password" placeholder="Şifre">
+         </form>
         </div>
          <div class="login">
             <input type="button" value="Giriş Yap" id="login">
